Various workspaces UI fixes
- Remove horizontal scrolling when
workspace name is long in Workspaces popover
- Fix workspaces list in mobile devices

--- a/ee/app/assets/stylesheets/page_bundles/remote_development.scss
+++ b/ee/app/assets/stylesheets/page_bundles/remote_development.scss
@@ -2,6 +2,10 @@
 
 .workspace-preview-link {
   @include gl-white-space-normal;
-  display: flex;
+  overflow: hidden;
+  // This property is necessary to implement line truncation.
+  // stylelint-disable-next-line
+  display: -webkit-box;
   -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
